Abel: Modified index.html

--- a/CPS3525/index.html
+++ b/CPS3525/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Submission</title>
+    <title>Game</title>
 </head>
 <body>
-
+  <h1> Game name </h1>
+   <form action="../cgi-bin/CPS3525/main" method="get" enctype="multipart/form-data">
+   
+   </form>
 </body>
 </html>
