--- a/CPS3525/index.html
+++ b/CPS3525/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1> Game name </h1>
-   <form action="../cgi-bin/CPS3525/main" method="get" enctype="multipart/form-data">
+   <form action="../cgi-bin/CPS3525/project3" method="get" enctype="multipart/form-data">
    
    </form>
 </body>
