--- a/CPS3525/index.html
+++ b/CPS3525/index.html
@@ -159,7 +159,7 @@
 <body>
     <h1>Word Search <span style="color: #ffca28;">Puzzle</span></h1>
     <div class="form-container">
-        <form method="get" action="../cgi-bin/CPS3525/project3">
+        <form method="post" action="../cgi-bin/CPS3525/project3" enctype="multipart/form-data">
 			<label for="customWords">Upload Custom Word List (Optional):</label>
 			<input type="file" id="customWords" name="customWords" accept=".txt">
 			<small>Upload a plain text file with one word per line.</small>
