--- a/CPS3525/index.html
+++ b/CPS3525/index.html
@@ -168,7 +168,7 @@
 			<select id="theme" name="theme">
 				<option value="animals">🐾 Animals</option>
 				<option value="fruits">🍉 Fruits</option>
-				<option value="programming">✈️ Locations</option>
+				<option value="locations">✈️ Locations</option>
 				<option value="custom">📄 Use Custom List</option>
 			</select>
             <small id="theme-help">Select the theme for your word discovery adventure!</small>
