--- a/CPS3525/index.html
+++ b/CPS3525/index.html
@@ -1,58 +1,106 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pattern Guessing Game</title>
     <style>
-        .instructions {
-            background-color: #e8f4ff;
-            border-left: 4px solid #2196F3;
-            padding: 10px;
-            margin-bottom: 20px;
-            font-size: 14px;
+        body {
+            font-family: sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+            color: #555;
+        }
+        input[type="file"],
+        input[type="text"],
+        input[type="number"],
+        select,
+        textarea {
+            width: calc(100% - 12px);
+            padding: 8px;
+            margin-bottom: 15px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        input[type="radio"],
+        input[type="checkbox"] {
+            margin-right: 5px;
+        }
+        .radio-group label,
+        .checkbox-group label {
+            display: inline-block;
+            margin-right: 15px;
+            font-weight: normal;
+        }
+        input[type="submit"] {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+        .calendar-container {
+            margin-bottom: 15px;
+        }
+        input[type="date"] {
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        .slider-container {
+            margin-bottom: 15px;
+        }
+        input[type="range"] {
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <h1>Pattern Guessing Game</h1>
-    <div class="instructions">
-        <strong>📄 Input File Format:</strong><br>
-        - The first line must contain two integers: the number of rows and columns.<br>
-        - The following lines must contain the grid with only uppercase letters A–Z.<br>
-        <br>
-        <strong>Example:</strong><br>
-        <code>
-            4 5<br>
-            ABCDE<br>
-            ZYXWV<br>
-            KLMNO<br>
-            PQRST
-        </code>
-    </div>
+    <div class="container">
+        <h1>Pattern Guessing Game</h1>
+        <form action="/cgi-bin/CPS3525/project3" method="post" enctype="multipart/form-data">
+            <div>
+                <label for="pattern_file">Upload Pattern File:</label>
+                <input type="file" id="pattern_file" name="pattern_file" required>
+            </div>
 
-    <form action="/cgi-bin/CPS3525/project3" method="GET" enctype="multipart/form-data">
-        <div>
-            <label for="pattern_file">Upload Pattern File:</label>
-            <input type="file" id="pattern_file" name="pattern_file">
-        </div>
-        <div>
-            <label for="guess_char">Your Guess (A-Z):</label>
-            <input type="text" id="guess_char" name="guess_char" maxlength="1">
-        </div>
-        <div>
-            <label>Guessing For:</label><br>
-            <input type="radio" id="max_count" name="guess_type" value="max" required>
-            <label for="max_count">Maximum Count</label><br>
-            <input type="radio" id="min_count" name="guess_type" value="min" required>
-            <label for="min_count">Minimum Count</label>
-        </div>
-        <div>
-            <label>Options:</label><br>
-            <input type="checkbox" id="show_pattern" name="show_pattern" value="yes">
-            <label for="show_pattern">Show Pattern on Result</label><br>
-            <input type="checkbox" id="show_counts" name="show_counts" value="yes">
-            <label for="show_counts">Show Character Counts</label><br>
-        </div>
-        <button type="submit">Submit Guess</button>
-    </form>
+            <div>
+                <label for="guess_char">Guess the Character (A-Z):</label>
+                <input type="text" id="guess_char" name="guess_char" maxlength="1" pattern="[A-Z]" title="Enter a single uppercase letter" required>
+            </div>
+
+            <div>
+                <label for="guess_type">Guessing for:</label>
+                <select id="guess_type" name="guess_type" required>
+                    <option value="">Select...</option>
+                    <option value="maximum">Maximum Count</option>
+                    <option value="minimum">Minimum Count</option>
+                </select>
+            </div>
+
+            <button type="submit">Submit Guess</button>
+        </form>
+    </div>
 </body>
 </html>
