Add a new radio, remove word limit, change max/min to occurrences

--- a/CPS3525/project3.html
+++ b/CPS3525/project3.html
@@ -91,12 +91,8 @@
         </div>
 
         <div>
-            <label for="guess_type">Guessing for:</label>
-            <select id="guess_type" name="guess_type" required>
-                <option value="">Select...</option>
-                <option value="maximum">Maximum Count</option>
-                <option value="minimum">Minimum Count</option>
-            </select>
+            <label for="guess_occurrences">Guess occurrences:</label>
+            <input type="number" id="guess_occurrences" name="guess_occurrences" title="Enter the number of occurrences to guess" required min="0">
         </div>
 
         <div class="radio-group">
