Changed radio button to checkbox so it can be unchecked

--- a/CPS3525/project3.html
+++ b/CPS3525/project3.html
@@ -97,7 +97,7 @@
 
         <div class="radio-group">
             <label>
-                <input type="radio" name="conversion" value="convert"> convert to numbers
+                <input type="checkbox" name="conversion" value="convert"> convert to numbers
             </label>
         </div>
 
