--- a/CPS3525/project3.html
+++ b/CPS3525/project3.html
@@ -86,7 +86,7 @@
         </div>
 
         <div>
-            <label for="guess_pattern">Guess the Pattern:</label>
+            <label for="guess_pattern">Input a Pattern:</label>
             <input type="text" id="guess_pattern" name="guess_pattern" placeholder="Ex. ABC" title="Enter the pattern to guess" required>
         </div>
 
