--- a/CPS3525/project3.html
+++ b/CPS3525/project3.html
@@ -87,7 +87,7 @@
 
         <div>
             <label for="guess_pattern">Input a Pattern:</label>
-            <input type="text" id="guess_pattern" name="guess_pattern" placeholder="Ex. ABC" title="Enter the pattern to guess" required>
+            <input type="text" id="guess_pattern" name="guess_pattern" placeholder="Ex. ABC" title="Enter the pattern" minlength="2" required>
         </div>
 
         <div>
