--- a/CPS3525/project3.html
+++ b/CPS3525/project3.html
@@ -78,7 +78,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Pattern Guessing Game</h1>
+    <h1>Pattern Game</h1>
     <form action="../cgi-bin/project3" method="post" enctype="multipart/form-data">
         <div>
             <label for="pattern_file">Upload Pattern File:</label>
